--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Card</title>
+     <link rel="stylesheet" href="css\style.css"/>
 </head>
 <body>
-    
-    <!-- 
-    You must have: 
-    - a profile picture image
-    - Name
-    - Title
-    - Phone Number
-    - Company/Organization Name
+    <main> 
+        <article class="container">
 
-    -->
-    
+            <section class="pic">
+              <a href="images\LilWayne.jpg">
+              <img alt="Lil Wayne pic" src="images\LilWayne.jpg"> </a>
+            </section>
+
+          <section class="contact">
+              <div class="contact1">
+                <h2>Lil Wayne</h2>
+                <p>Rapper</p> 
+                <p>504-226-7020</p>
+              </div>
+                 <div class="contact2">
+                   <h2>Young Money</h2>
+                   <p>Best Rapper Alive</p>
+                 </div>
+           </section>
+        </article>
+    </main>
 
 
 </body>
